--- a/app/src/main/res/layout/activity_nav_home.xml
+++ b/app/src/main/res/layout/activity_nav_home.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
@@ -15,7 +16,7 @@
     <!-- NavigationView for the drawer menu -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
-        android:layout_width="240dp"
+        android:layout_width="210dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/color_secondary"
