--- a/app/src/main/res/layout/item_order_history.xml
+++ b/app/src/main/res/layout/item_order_history.xml
@@ -81,7 +81,7 @@
                 app:cardCornerRadius="12dp">
 
                 <ImageView
-                    android:id="@+id/product_first_image"
+                    android:id="@+id/product_image"
                     android:layout_width="92dp"
                     android:layout_height="92dp"
                     android:scaleType="centerCrop"
