--- a/app/src/main/res/layout/item_order_process.xml
+++ b/app/src/main/res/layout/item_order_process.xml
@@ -124,7 +124,7 @@
                         android:textStyle="normal" />
 
                     <TextView
-                        android:id="@+id/txt_product_quantity"
+                        android:id="@+id/product_quantity"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/annapurna_sil"
@@ -155,7 +155,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/txt_total_all_product"
+                android:id="@+id/total_all_product"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
