--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -10,25 +10,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_margin="16dp"
         android:gravity="center_vertical"
-        android:padding="16dp">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/back_button"
-            android:layout_width="44dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/ic_back_arrow"
-            app:tint="#000000" />
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:clickable="true"
+            android:contentDescription="Back"
+            android:focusable="true"
+            android:padding="8dp"
+            android:src="@drawable/ic_back_arrow" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="56dp"
-            android:fontFamily="@font/annapurna_sil"
+            android:layout_marginRight="48dp"
+            android:fontFamily="@font/annapurna_sil_bold"
             android:text="Edit Item"
+            android:textAlignment="center"
             android:textColor="#884F04"
             android:textSize="32sp"
             android:textStyle="bold" />
@@ -112,7 +114,7 @@
                 android:id="@+id/image_preview"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_marginStart="75dp"
+                android:layout_marginStart="60dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/logo_single"
                 android:visibility="visible"
